# crypto

./: Cargo.toml  README.md  netlify.toml
.cargo/: config.toml
src/: aes.rs  chacha20.rs  crc.rs  diffie_hellman.rs  docs-header.html  galois_field.rs  hamming.rs  hmac.rs  lfsr.rs  lib.rs  md5.rs  polynomial.rs  reed_solomon.rs  sha1.rs  shamir.rs  test.md
