[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
const_for = "0.1.4"
either = "1.13.0"
embed-doc-image = "0.1.4"
getrandom = "0.2.15"
gf256 = "0.3.0"
oorandom = "11.1.3"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./src/assets/docs-header.html" ]
features = ["doc-images"]

[features]
doc-images = []
